--- a/index.htm
+++ b/index.htm
@@ -1,43 +1,16 @@
 <!DOCTYPE html>
 
-<!--<html lang="en">-->
-<html lang="en" manifest="cache.manifest">
+<html lang="en">
+<!-- <html lang="en" manifest="cache.manifest"> -->
 <head>
 	<meta charset="utf-8" />
 	<title>Pacman in HTML 5 Canvas</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="pacman-canvas.css">
 	
-	<!-- SEO Stuff -->
-    <meta name="description" content="Play Pacman Canvas for free on your desktop or mobile. This whole game is open source an was created in HTML5." />
-    <link rel="canonical" href="http://pacman.platzh1rsch.ch/" />
-    <meta name="author" content="platzh1rsch.ch" />
-    <meta name="publisher" content="platzh1rsch.ch" />
-    <meta name="copyright" content="&copy; Copyright (c) platzh1rsch.ch" />
-    <meta name="robots" content="index,follow" />
-    <meta http-equiv="content-language" content="de">
-    <meta name="language" content="de">
-    <meta name="page-topic" content="Games/Arcade" />
-
-    <meta content="National" name="distribution" />
-    <meta content="pacman.platzh1rsch.ch" name="target" />
-
-   	<!-- Facebook Open Graph Information -->
-	<meta property="og:image" content="http://pacman.platzh1rsch.ch/img/Icon-200x200.png"/>
-    <meta property="og:title" content="Pacman Canvas in HTML5" />
-	<meta property="og:description" content="Play Pacman Canvas for free on your desktop or mobile. This whole game is open source an was created in HTML5." />
-    <meta property="og:url" content="http://pacman.platzh1rsch.ch/" />
-    <meta property="og:site_name" content="Pacman Canvas in HTML5" />
-	<meta property="og:locale" content="en_US" />
-
 	<!-- site icons -->
 	<link rel="shortcut icon" href="img/Icon-130x130.png" />
 	<link rel="apple-touch-icon" href="img/Icon-130x130.png" />
-
-    <meta property="og:image" content="http://pacman.platzh1rsch.ch/img/Icon-130x130.png"/>
-
-	<!-- AppsFuel verification code -->
-	<meta name="appsfuel_code" content="83d3cedc1050a5c"/>
 	
 	<!-- Mobile Viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
@@ -48,22 +21,6 @@
 	<!-- Script -->
 	<script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
 	<script src="js/jquery.hammer.min.js" type="text/javascript"></script>
-	
-	<!-- Google Analytics -->
-	<script type="text/javascript">
-
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-28993174-1']);
-	  _gaq.push(['_setDomainName', 'pacman.platzh1rsch.ch']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
 	
 </head>
 
@@ -116,31 +73,14 @@
 	<div class="button" id="back">back</div>
 	<div>
 		<h1>Info</h1>
-		<p>Current Version: 0.86 (25.05.2015) (<a href="#" id="updateCode">get latest</a>)</p>
-		<img src="img/platzh1rsch-logo.png">
-		<p>Pacman Canvas is Open Source, written by <a href="http://platzh1rsch.ch">platzh1rsch</a>. You can get the code on <a target="_blank" href="https://github.com/platzhersh/pacman-canvas" target="_blank">github</a>.</p>
-		<p>If you have any suggestions how to make this app better, please post your suggestion / request on <a target="_blank" href="https://platzh1rsch.uservoice.com/">uservoice</a>.</p>
-		<p>
+		<p>...</p>
 	</div>
 </div>
 
 
 
 <!-- main game content -->
-<div class="content" id="game-content">
-
-		<!-- Google AdSense -->
-		<div id="adsense">
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<ins class="adsbygoogle"
-			     style="display:inline-block;width:320px;height:50px"
-			     data-ad-client="ca-pub-0176206735745791"
-			     data-ad-slot="6492298622"></ins>
-			<script>
-			(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
-		</div>
-	
+<div class="content" id="game-content">	
 	
 	<!-- main game content -->
 	<div class="game wrapper">
