--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 </div>
 </div>
 
+	<script src="js/animation.js" type="text/javascript"></script>
 	<script src="pacman-canvas.js" type="text/javascript"></script>
 
 
